Fix HTML formatting and remove unnecessary comments-rEMOVEsPACE

--- a/index.html
+++ b/index.html
@@ -1,28 +1,1 @@
-<!-- Página principal do gerenciador de tarefas -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Task Manager</title>
-  <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✅</text></svg>">
-</head>
-<body>
-  <main class="app-container">
-    <header>
-      <h1>Task Manager</h1>
-    </header>
-    <form id="task-form" aria-labelledby="form-heading">
-      <h2 id="form-heading" class="sr-only">Add a new task</h2>
-      <input type="text" id="task-input" placeholder="Add a new task..." aria-label="New task input" required>
-      <button type="submit" aria-label="Add task">Add</button>
-    </form>
-    <section class="task-list-container" aria-labelledby="task-list-heading">
-       <h2 id="task-list-heading" class="sr-only">Your tasks</h2>
-       <ul id="task-list"></ul>
-    </section>
-  </main>
-  <script type="module" src="index.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Task Manager</title><link rel="stylesheet" href="index.css"><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✅</text></svg>"></head><body><main class="app-container"><header><h1>Task Manager</h1></header><form id="task-form" aria-labelledby="form-heading"><h2 id="form-heading" class="sr-only">Add a new task</h2><input type="text" id="task-input" placeholder="Add a new task..." aria-label="New task input" required> <button type="submit" aria-label="Add task">Add</button></form><section class="task-list-container" aria-labelledby="task-list-heading"><h2 id="task-list-heading" class="sr-only">Your tasks</h2><ul id="task-list"></ul></section></main><script type="module" src="index.js"></script></body></html>
